# learn-opengl

./: CMakeLists.txt  README.md
cmake/: glm.cmake  precompiled.cmake
data/shaders/: basic_lighting.fs  frag.txt  vert.txt
src/: CMakeLists.txt
src/learn-opengl/: CMakeLists.txt  main.cpp  opengl.h  pch.h  shader.cpp  shader.h  texture.h  window.h
src/learn-opengl/include/: CMakeLists.txt  application.h  camera.h  clock.h  input.h  opengl.h  shader.h  texture.h  window.h
src/learn-opengl/platform/: null_window.cpp  win32_opengl.cpp  win32_window.cpp
src/learn-opengl/src/: CMakeLists.txt  camera.cpp  clock.cpp  main.cpp  pch.h  shader.cpp  texture.cpp
src/learn-opengl/src/platform/: null_opengl.cpp  win32_application.cpp  win32_input.cpp  win32_opengl.cpp  win32_window.cpp
src/wmcv-log/include/wmcv_log/: wmcv_format.h
src/wmcv-log/test/: CMakeLists.txt
test/: CMakeLists.txt
